# canadian-a11y-advisor

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docs/federal/: aca.txt  acr.txt  en301549.txt
docs/ontario/: aoda.txt  iasr.txt
docs/provinces/: summary.txt
docs/wcag/: wcag21.txt
src/advisor/: __init__.py  app.py  config.py  graph.py  prompts.py  tools.py  vectorstore.py
